[gd_scene load_steps=4 format=2]

[ext_resource path="res://Projectile.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Projectile" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 0
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
color = Color( 0, 0, 1, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Trace" type="CPUParticles2D" parent="."]
emitting = false
amount = 32
lifetime = 0.5
one_shot = true
randomness = 1.0
local_coords = false
gravity = Vector2( 0, 4116 )
scale_amount = 3.0
color = Color( 0, 0, 1, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
